# Vocabry

./: .gitignore  README.md  pyproject.toml
anki_addon/: __init__.py  config.json  manifest.json
docs/: INVARIANTS.md  PROJECT.md  README.md  STATUS.md  development.md
docs/architecture/: system-map.md  system-overview.md
docs/archive/: README.md
docs/components/: README.md  anki-addon.md  cli.md  demo-generator.md  preview.md  vocabd.md
docs/cross-cutting/: reliability-testing.md  security.md
docs/decisions/: 0001-local-card-library.md  0002-single-database-owner.md  0003-atomic-filesystem-import.md  0004-current-html-and-manual-overrides.md  0005-thin-anki-adapter.md  0006-api-only-management.md  README.md
docs/delivery/: implementation-plan.md
docs/design/: README.md  anki-sync.md  api.md  data-model.md  desktop-gui.md  generator-protocol.md  offline-import.md
docs/domain/: card-model.md
docs/product/: README.md  cards-and-generators.md  concepts.md  scope.md  workflows.md
docs/protocols/: README.md  anki-sync.md  local-api.md  offline-import.md
docs/quality/: security.md  verification.md
docs/roadmap/: implementation-plan.md
src/vocabry/: __init__.py  __main__.py  api.py  config.py  credentials.py  database.py  demo_generator.py  errors.py  generator_protocol.py  gui.py  importer.py  models.py  renderer.py  service.py
tests/: conftest.py  test_anki_addon.py  test_api.py  test_database.py  test_generator_protocol.py  test_gui.py  test_importer.py  test_renderer.py  test_word_query_live.py  test_word_query_process_live.py  test_word_query_request.py
(+14 files in other folders)
