[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vocabry"
version = "0.2.0"
description = "Local-first vocabulary card library with Anki synchronization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "keyring>=25,<26",
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
vocabd = "vocabry.__main__:main"
vocabry-demo = "vocabry.demo_generator:main"
vocabry-gui = "vocabry.gui:main"
vocabry-word-query = "vocabry.generators.word_query:main"

[tool.setuptools.package-data]
vocabry = ["generators/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
